# apps/api/src/auth/dto/change-password.dto.ts
@@ -1,0 +1,9 @@
+import { createZodDto } from 'nestjs-zod';
+import { z } from 'zod';
+
+export const changePasswordSchema = z.object({
+  currentPassword: z.string().optional(),
+  newPassword: z.string().min(8, 'New password must be at least 8 characters'),
+});
+
+export class ChangePasswordDto extends createZodDto(changePasswordSchema) {}
